# PromProgHW

./: CMakeCache.txt  CMakeLists.txt  README  WORKSPACE  create_map.py  main.cpp
A/: preparing.py
AbstractFactory/cpp-source/: BUILD
Adapter/cpp-source/: BUILD
B/: CmakeLists.txt  lib.cpp
Bridge/cpp-source/: BUILD
Builder/cpp-source/: BUILD
C/: main.cpp  main.h
ChainResponsibility/cpp-source/: BUILD
Command/cpp-source/: BUILD
Composite/cpp-source/: BUILD
Facade/cpp-source/: BUILD
FactoryMethod/cpp-source/: BUILD
Mediator/cpp-source/: BUILD
Memento/cpp-source/: BUILD
Observer/cpp-source/: BUILD
Prototype/cpp-source/: BUILD
State/cpp-source/: BUILD
Strategy/cpp-source/: BUILD
Task3/: CMakeLists.txt  README.txt
Task3/src/: CMakeLists.txt
Visitor/cpp-source/: BUILD
__MACOSX/Task3/: ._.gitignore
bazel-out/: stable-status.txt  volatile-status.txt
